Bug Fix : added dbcontext service and edited some relations

--- a/src/ChatApp.MVC/appsettings.json
+++ b/src/ChatApp.MVC/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=db18579.public.databaseasp.net; Database=db18579; User Id=db18579; Password=Wt4?w6@MTe3-; Encrypt=True; TrustServerCertificate=True; MultipleActiveResultSets=True;"
+  }
 }
